# lnr-practicas

./: .gitignore  LNR_LAB_S4_activity.ipynb  LNR_LAB_S6_deliverable.ipynb  pyproject.toml
pract_1/: LNR_LAB_S1_NLTK.ipynb  LNR_LAB_S1_activity_1.ipynb  LNR_LAB_S1_activity_2.ipynb  LNR_LAB_S1_examples.ipynb
pract_2/: LNR_LAB_S2_deliverable.ipynb  LNR_LAB_S2_examples.ipynb
pract_2/EXIST2026_training_subset.json/__MACOSX/: ._EXIST2026_training_subset.json
pract_3/: LNR_LAB_S3_activity.ipynb  LNR_LAB_S3_examples_contextual_emb.ipynb  LNR_LAB_S3_examples_static_emb.ipynb  meta.json  my-word-embedding-vectors-100d.txt
pract_5/: LNR_LAB_S3_activity_filled.ipynb  LNR_LAB_S5_activity.ipynb
