[project]
name = "lnr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.0.0",
    "fasttext-wheel>=0.9.2",
    "gensim>=4.4.0",
    "huggingface-hub>=1.11.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nltk>=3.9.4",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
